# advent_of_code

./: .editorconfig  .gitignore  Cargo.toml  README.md
benches/: accurate_timings_2023.rs
src/: lib.rs  main.rs
src/aoc/: helpers.rs  mod.rs
src/aoc/year2015/: mod.rs
src/aoc/year2016/: mod.rs
src/aoc/year2017/: mod.rs
src/aoc/year2018/: mod.rs
src/aoc/year2019/: mod.rs
src/aoc/year2020/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
src/aoc/year2021/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  mod.rs
src/aoc/year2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc/year2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
