[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
crossbeam = "0.8.1"
cursive = "0.17.0-alpha.0"
cursive_calendar_view = "0.7.2"
itertools = "0.10.1"
once_cell = "1.8.0"
petgraph = "0.6.0"
regex = "1.5.4"
smol_str = "0.1.21"
tokio = { version = "1.14.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 3