[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["no-rng", "std"] }
anyhow = "1.0.51"
bit-set = "0.5.3"
chrono = "0.4.19"
clap = { version = "4.0.26", features = ["derive"] }
clap_generate = "3.0.0-beta.5"
crossbeam = "0.8.1"
cursive = "0.20.0"
cursive_calendar_view = "0.8.0"
geo = "0.23.1"
image = "0.24.5"
indexmap = "1.7.0"
itertools = "0.10.1"
nalgebra = "0.31.4"
nohash-hasher = "0.2.0"
nom = "7.1.1"
once_cell = "1.8.0"
permute = "0.2.1"
petgraph = "0.6.2"
regex = "1.5.4"
rust-embed = "6.4.2"
smol_str = "0.1.21"
termcolor = "1.1.3"
thiserror = "1.0.37"
tinyvec = { version = "1.5.1", features = ["alloc"] }
tokio = { version = "1.14.0", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
