[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["no-rng", "std"] }
anyhow = "1.0"
arc-swap = "1.6.0"
bit-set = "0.5.3"
bytecount = { version = "0.6.7", features = ["runtime-dispatch-simd"] }
chrono = { version = "0.4", default-features = false, features = [] }
clap = { version = "4.4", features = ["derive"] }
clap_generate = "3.0"
compact_str = "0.7.1"
crossbeam = "0.8"
enumflags2 = "0.7.8"
#cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
#cursive_calendar_view = "0.8.0"
geo = "0.27"
iai-callgrind = "0.8.0"
image = "0.24"
indexmap = "2.1"
itertools = "0.12"
nalgebra = "0.32"
nohash-hasher = "0.2.0"
nom = "7.1.1"
once_cell = "1.8.0"
permute = "0.2.1"
petgraph = "0.6.2"
ratatui = "0.24"
regex = "1.5.4"
rust-embed = "8"
smol_str = "0.2"
termcolor = "1.4"
thiserror = "1.0"
tinyvec = { version = "1.6", features = ["alloc"] }
tokio = { version = "1.34", features = ["full"] }

[profile.release]
lto = true
opt-level = 3

[profile.bench]
debug = true

[[bench]]
name = "accurate_timings_2023"
harness = false
